--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.10",
+    "rxjs-compat": "^6.2.1",
     "typescript": "~2.9.1"
   },
   "description": "An Ionic project"
