--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "@ionic/app-scripts": "3.1.10",
     "angularfire2": "^5.0.0-rc.10",
+    "firebase": "^5.1.0",
     "rxjs-compat": "^6.2.1",
     "typescript": "~2.9.1"
   },
