--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
     "ionic-angular": "3.9.2",
-    "ionicons": "4.2.2",
+    "ionicons": "4.2.4",
     "rxjs": "6.2.1",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
@@ -37,7 +37,7 @@
     "angularfire2": "^5.0.0-rc.10",
     "firebase": "^5.1.0",
     "rxjs-compat": "^6.2.1",
-    "typescript": "~2.9.1"
+    "typescript": "^2.7.2"
   },
   "description": "An Ionic project"
 }
